objects/Inspection_Request__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Inspection Requests</relationshipLabel>
        <relationshipName>Inspection_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Buyer_Signup__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Buyer Signup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Auction_Site__c</fullName>
        <label>Number of Auction Site</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_SiriusXM__c</fullName>
        <label>Number of SiriusXM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Standard_Inspection__c</fullName>
        <label>Number of Standard Inspection</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_True360__c</fullName>
        <label>Number of True360</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <label>Request Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Inspection Request</label>
    <nameField>
        <displayFormat>IR {0000000}</displayFormat>
        <label>Inspection Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inspection Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>